[STREAMPIPES-352] Add restart policy to docker compose files of installer

--- a/compose/docker-compose.full.yml
+++ b/compose/docker-compose.full.yml
@@ -34,6 +34,7 @@ services:
       - backend:/root/.streampipes
       - files:/spImages
     logging: *default-logging
+    restart: unless-stopped
     networks:
       spnet:
 
@@ -48,6 +49,7 @@ services:
     volumes:
       - connect:/data/
     logging: *default-logging
+    restart: unless-stopped
     networks:
       spnet:
 
@@ -61,6 +63,7 @@ services:
       - consul
       - backend
     logging: *default-logging
+    restart: unless-stopped
     networks:
       spnet:
 
@@ -68,6 +71,7 @@ services:
   activemq:
     image: fogsyio/activemq:5.15.9
     logging: *default-logging
+    restart: unless-stopped
     networks:
       spnet:
 
@@ -91,6 +95,7 @@ services:
       - -enable-script-checks=true
       - -ui
     logging: *default-logging
+    restart: unless-stopped
     networks:
       spnet:
         ipv4_address: ${SP_CONSUL_CONTAINER_IP}
@@ -100,6 +105,7 @@ services:
     volumes:
       - couchdb:/opt/couchdb/data
     logging: *default-logging
+    restart: unless-stopped
     networks:
       spnet:
 
@@ -122,6 +128,7 @@ services:
       - kafka:/kafka
       - /var/run/docker.sock:/var/run/docker.sock
     logging: *default-logging
+    restart: unless-stopped
     networks:
       spnet:
 
@@ -130,6 +137,7 @@ services:
     volumes:
       - zookeeper:/opt/zookeeper-3.4.13
     logging: *default-logging
+    restart: unless-stopped
     networks:
       spnet:
 
@@ -142,6 +150,7 @@ services:
     volumes:
       - influxdb:/var/lib/influxdb
     logging: *default-logging
+    restart: unless-stopped
     networks:
       spnet:
 
@@ -151,6 +160,7 @@ services:
     environment:
       - JOB_MANAGER_RPC_ADDRESS=jobmanager
     logging: *default-logging
+    restart: unless-stopped
     networks:
       spnet:
 
@@ -165,6 +175,7 @@ services:
       - JOB_MANAGER_RPC_ADDRESS=jobmanager
       - TASK_MANAGER_NUMBER_OF_TASK_SLOTS=20
     logging: *default-logging
+    restart: unless-stopped
     networks:
       spnet:
 
@@ -176,6 +187,7 @@ services:
     volumes:
       - files:/spImages
     logging: *default-logging
+    restart: unless-stopped
     networks:
       spnet:
 
@@ -185,6 +197,7 @@ services:
       - consul
       - kafka
     logging: *default-logging
+    restart: unless-stopped
     networks:
       spnet:
 
@@ -195,6 +208,7 @@ services:
       - consul
       - jobmanager
     logging: *default-logging
+    restart: unless-stopped
     networks:
       spnet:
 
@@ -204,6 +218,7 @@ services:
       - consul
       - kafka
     logging: *default-logging
+    restart: unless-stopped
     networks:
       spnet:
 
