--- a/pom.xml
+++ b/pom.xml
@@ -136,6 +136,7 @@
         <protobuf.version>3.6.1</protobuf.version>
         <slack.version>1.2.0</slack.version>
         <poiji.version>2.7.0</poiji.version>
+        <nats.version>2.11.0</nats.version>
 
     </properties>
 
@@ -354,6 +355,11 @@
                         <artifactId>jersey-server</artifactId>
                     </exclusion>
                 </exclusions>
+            </dependency>
+            <dependency>
+                <groupId>io.nats</groupId>
+                <artifactId>jnats</artifactId>
+                <version>${nats.version}</version>
             </dependency>
 
             <!-- StreamPipes dependencies -->
