--- a/streampipes-performance-tests/pom.xml
+++ b/streampipes-performance-tests/pom.xml
@@ -49,6 +49,12 @@
             <artifactId>streampipes-dataformat-json</artifactId>
             <version>0.68.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.streampipes</groupId>
+            <artifactId>streampipes-client</artifactId>
+            <version>0.68.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
 
         <!-- External dependencies -->
     </dependencies>
