--- a/streampipes-connect-container-master/pom.xml
+++ b/streampipes-connect-container-master/pom.xml
@@ -31,7 +31,7 @@
         <!-- StreamPipes dependencies -->
         <dependency>
             <groupId>org.apache.streampipes</groupId>
-            <artifactId>streampipes-connect-container</artifactId>
+            <artifactId>streampipes-connect</artifactId>
             <version>0.68.0-SNAPSHOT</version>
         </dependency>
         <dependency>
