--- a/streampipes-container-extensions/pom.xml
+++ b/streampipes-container-extensions/pom.xml
@@ -38,7 +38,7 @@
         </dependency>
         <dependency>
             <groupId>org.apache.streampipes</groupId>
-            <artifactId>streampipes-container</artifactId>
+            <artifactId>streampipes-container-standalone</artifactId>
             <version>0.68.0-SNAPSHOT</version>
         </dependency>
         <dependency>
