--- a/streampipes-backend/pom.xml
+++ b/streampipes-backend/pom.xml
@@ -69,6 +69,10 @@
             <groupId>io.swagger.core.v3</groupId>
             <artifactId>swagger-jaxrs2</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
 
         <!-- Dependency convergence -->
         <dependency>
