--- a/streampipes-logging/pom.xml
+++ b/streampipes-logging/pom.xml
@@ -34,5 +34,10 @@
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.fusesource.mqtt-client</groupId>
+            <artifactId>mqtt-client</artifactId>
+            <version>1.12</version>
+        </dependency>
     </dependencies>
 </project>
