--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
     </parent>
 
     <artifactId>streampipes-extensions</artifactId>
-    <version>0.68.0-SNAPSHOT</version>
+    <version>0.69.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <modules>
@@ -937,7 +937,7 @@
         <developerConnection>scm:git:ssh://git@github.com/apache/incubator-streampipes-extensions.git</developerConnection>
         <connection>scm:git:ssh://git@github.com/apache/incubator-streampipes-extensions.git</connection>
         <url>https://github.com/apache/incubator-streampipes-extensions</url>
-      <tag>rel/0.68.0</tag>
+      <tag>HEAD</tag>
   </scm>
 
 </project>
