[STREAMPIPES-393] Update IOTDB version

--- a/cli/deploy/standalone/iotdb/docker-compose.yml
+++ b/cli/deploy/standalone/iotdb/docker-compose.yml
@@ -16,7 +16,7 @@
 version: "3.4"
 services:
   iotdb:
-    image: xingtanzjr/iotdb
+    image: apache/iotdb
     volumes:
       - iotdb:/iotdb/data
     logging:
