[hotfix] Add mqtt transport dependency to Maven archetype poms

--- a/archetypes/streampipes-archetype-pe-sources/src/main/resources/archetype-resources/pom.xml
+++ b/archetypes/streampipes-archetype-pe-sources/src/main/resources/archetype-resources/pom.xml
@@ -89,6 +89,11 @@
             <artifactId>streampipes-sources</artifactId>
             <version>${sp.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.streampipes</groupId>
+            <artifactId>streampipes-messaging-mqtt</artifactId>
+            <version>${sp.version}</version>
+        </dependency>
     </dependencies>
 
     <build>
