--- a/archetypes/streampipes-archetype-pe-sinks-jvm/src/main/resources/archetype-resources/pom.xml
+++ b/archetypes/streampipes-archetype-pe-sinks-jvm/src/main/resources/archetype-resources/pom.xml
@@ -24,7 +24,7 @@
     <version>${version}</version>
 
     <properties>
-        <sp.version>0.68.0-SNAPSHOT</sp.version>
+        <sp.version>0.68.0</sp.version>
     </properties>
 
     <dependencies>
