--- a/streampipes-wrapper-spark/pom.xml
+++ b/streampipes-wrapper-spark/pom.xml
@@ -23,7 +23,7 @@
     <parent>
         <groupId>org.apache.streampipes</groupId>
         <artifactId>streampipes-parent</artifactId>
-        <version>0.68.0-SNAPSHOT</version>
+        <version>0.68.0</version>
     </parent>
 
     <artifactId>streampipes-wrapper-spark</artifactId>
@@ -107,17 +107,17 @@
         <dependency>
             <groupId>org.apache.streampipes</groupId>
             <artifactId>streampipes-model</artifactId>
-            <version>0.68.0-SNAPSHOT</version>
+            <version>0.68.0</version>
         </dependency>
         <dependency>
             <groupId>org.apache.streampipes</groupId>
             <artifactId>streampipes-container</artifactId>
-            <version>0.68.0-SNAPSHOT</version>
+            <version>0.68.0</version>
         </dependency>
         <dependency>
             <groupId>org.apache.streampipes</groupId>
             <artifactId>streampipes-wrapper</artifactId>
-            <version>0.68.0-SNAPSHOT</version>
+            <version>0.68.0</version>
         </dependency>
 
         <!-- External dependencies -->
