--- a/streampipes-maven-plugin/pom.xml
+++ b/streampipes-maven-plugin/pom.xml
@@ -20,7 +20,7 @@
     <parent>
         <artifactId>streampipes-parent</artifactId>
         <groupId>org.apache.streampipes</groupId>
-        <version>0.68.0</version>
+        <version>0.68.1-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
