--- a/streampipes-user-management/pom.xml
+++ b/streampipes-user-management/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <artifactId>streampipes-parent</artifactId>
         <groupId>org.apache.streampipes</groupId>
-        <version>0.68.0</version>
+        <version>0.68.1-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -32,12 +32,12 @@
         <dependency>
             <groupId>org.apache.streampipes</groupId>
             <artifactId>streampipes-model-client</artifactId>
-            <version>0.68.0</version>
+            <version>0.68.1-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.apache.streampipes</groupId>
             <artifactId>streampipes-storage-management</artifactId>
-            <version>0.68.0</version>
+            <version>0.68.1-SNAPSHOT</version>
         </dependency>
 
         <!-- External dependencies -->
