--- a/k8s/values.yaml
+++ b/k8s/values.yaml
@@ -20,7 +20,7 @@ persistentVolumeReclaimPolicy: "Retain"
 persistentVolumeAccessModes: "ReadWriteOnce"
 
 streampipes:
-  version: "0.68.0-SNAPSHOT"
+  version: "0.68.0"
   registry: "apachestreampipes"
 
 external:
