--- a/streampipes-storage-couchdb/pom.xml
+++ b/streampipes-storage-couchdb/pom.xml
@@ -31,7 +31,7 @@
         <!-- StreamPipes dependencies -->
         <dependency>
             <groupId>org.apache.streampipes</groupId>
-            <artifactId>streampipes-config</artifactId>
+            <artifactId>streampipes-service-discovery</artifactId>
             <version>0.69.0-SNAPSHOT</version>
         </dependency>
         <dependency>
