--- a/streampipes-user-management/pom.xml
+++ b/streampipes-user-management/pom.xml
@@ -31,6 +31,11 @@
         <!-- StreamPipes dependencies -->
         <dependency>
             <groupId>org.apache.streampipes</groupId>
+            <artifactId>streampipes-config</artifactId>
+            <version>0.69.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.streampipes</groupId>
             <artifactId>streampipes-model-client</artifactId>
             <version>0.69.0-SNAPSHOT</version>
         </dependency>
