--- a/ui/deployment/dev/config.yml
+++ b/ui/deployment/dev/config.yml
@@ -16,7 +16,7 @@
 login:
   backgroundImage: 'deployment/dev/img/background.png'
   logo: 'deployment/dev/img/logo.png'
-  logo-right: 'deployment/dev/img/sp-logo-right-white.png'
+  logo-navigation: 'deployment/dev/img/logo-navigation.png'
 modules:
   - spEditor
   - spPipelines
