[hotfix] Modify repository settings

--- a/pom.xml
+++ b/pom.xml
@@ -764,6 +764,7 @@
                         <source>1.8</source>
                         <target>1.8</target>
                         <encoding>UTF-8</encoding>
+                        <forceJavacCompilerUse>true</forceJavacCompilerUse>
                     </configuration>
                 </plugin>
                 <plugin>
@@ -947,9 +948,6 @@
             <releases>
                 <enabled>false</enabled>
             </releases>
-            <snapshots>
-                <updatePolicy>always</updatePolicy>
-            </snapshots>
         </repository>
     </repositories>
 
