--- a/ui/package.json
+++ b/ui/package.json
@@ -43,7 +43,7 @@
     "angular-gridster2": "8.3.0",
     "angular-loading-bar": "0.8.0",
     "angular-material-icons": "0.4.0",
-    "angular-plotly.js": "1.5.0",
+    "angular-plotly.js": "^4.0.0",
     "angular-tree-component": "8.5.6",
     "angular-ui-tree": "2.9.0",
     "angular2-uuid": "1.1.1",
@@ -78,7 +78,7 @@
     "ngx-quill": "12.0.1",
     "ngx-showdown": "5.1.0",
     "path": "^0.12.7",
-    "plotly.js": "1.52.2",
+    "plotly.js": "^2.3.1",
     "prismjs": "1.16.0",
     "quill": "1.3.7",
     "roboto-fontface": "0.10.0",
