--- a/ui/package.json
+++ b/ui/package.json
@@ -9,8 +9,7 @@
   },
   "scripts": {
     "start": "node ./deployment/prebuild.js && ng serve",
-    "watchtest": "node ./deployment/prebuild.js && karma start ./karma.conf.js --no-auto-watch --single-run",
-    "test": "node ./deployment/prebuild.js && karma start ./karma.conf.js",
+    "test": "node ./deployment/prebuild.js && ng test",
     "build": "node ./deployment/prebuild.js && set NODE_OPTIONS=--max-old-space-size=10192 && ng build --prod",
     "build-rc": "node ./deployment/prebuild.js rel && set NODE_OPTIONS=--max-old-space-size=10192 && ng build --prod",
     "lint": "tslint -c tslint.json 'src/**/*.ts*",
