[STREAMPIPES-427] Add streampipes-rest-core-base module, extract AuthGuardedResource to separate module, refactor pipeline API

--- a/pom.xml
+++ b/pom.xml
@@ -855,6 +855,7 @@
         <module>streampipes-service-discovery-api</module>
         <module>streampipes-connect-api</module>
         <module>streampipes-service-extensions-base</module>
+        <module>streampipes-rest-core-base</module>
     </modules>
 
     <profiles>
