--- a/streampipes-rest/pom.xml
+++ b/streampipes-rest/pom.xml
@@ -92,6 +92,11 @@
         </dependency>
         <dependency>
             <groupId>org.apache.streampipes</groupId>
+            <artifactId>streampipes-rest-core-base</artifactId>
+            <version>0.69.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.streampipes</groupId>
             <artifactId>streampipes-connect-container-master</artifactId>
             <version>0.69.0-SNAPSHOT</version>
         </dependency>
