--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,7 @@
         <jersey.version>2.33</jersey.version>
         <jetty.version>9.4.19.v20190610</jetty.version>
         <jgrapht.version>1.3.1</jgrapht.version>
+        <jjwt.version>0.11.2</jjwt.version>
         <json-path.version>3.1.0</json-path.version>
         <jsr305.version>3.0.2</jsr305.version>
         <kafka.version>2.7.0</kafka.version>
@@ -99,8 +100,8 @@
         <snakeyaml.version>1.26</snakeyaml.version>
         <snappy-java.version>1.1.7.7</snappy-java.version>
         <spark.version>2.1.2</spark.version>
-        <spring.version>5.3.2</spring.version>
-        <spring-boot.version>2.4.1</spring-boot.version>
+        <spring.version>5.3.10</spring.version>
+        <spring-boot.version>2.5.5</spring-boot.version>
         <swagger.version>2.1.6</swagger.version>
         <type-parser.version>0.6.0</type-parser.version>
         <underscore.version>1.47</underscore.version>
@@ -280,6 +281,21 @@
                 <groupId>io.rest-assured</groupId>
                 <artifactId>json-path</artifactId>
                 <version>${json-path.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.jsonwebtoken</groupId>
+                <artifactId>jjwt-api</artifactId>
+                <version>${jjwt.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.jsonwebtoken</groupId>
+                <artifactId>jjwt-impl</artifactId>
+                <version>${jjwt.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.jsonwebtoken</groupId>
+                <artifactId>jjwt-jackson</artifactId>
+                <version>${jjwt.version}</version>
             </dependency>
             <dependency>
                 <groupId>io.swagger.core.v3</groupId>
@@ -663,6 +679,11 @@
             </dependency>
             <dependency>
                 <groupId>org.springframework</groupId>
+                <artifactId>spring-expression</artifactId>
+                <version>${spring.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework</groupId>
                 <artifactId>spring-web</artifactId>
                 <version>${spring.version}</version>
             </dependency>
@@ -674,6 +695,11 @@
             <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-starter-jetty</artifactId>
+                <version>${spring-boot.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-oauth2-client</artifactId>
                 <version>${spring-boot.version}</version>
             </dependency>
             <dependency>
