--- a/ui/package.json
+++ b/ui/package.json
@@ -30,6 +30,7 @@
     "@angular/router": "11.0.5",
     "@angular/upgrade": "11.0.5",
     "@asymmetrik/ngx-leaflet": "6.0.1",
+    "@auth0/angular-jwt": "^5.0.2",
     "@ctrl/ngx-codemirror": "3.1.3",
     "@danielmoncada/angular-datetime-picker": "10.0.0",
     "@fortawesome/fontawesome-free": "5.12.1",
