Set default imagePullPolicy to 'IfNotPresent'
This change avoids unnecessary re-pulling of Docker images and thus avoids hitting Docker Hub's pull rate limits

--- a/k8s/values.yaml
+++ b/k8s/values.yaml
@@ -15,7 +15,7 @@
 
 # lite or full (default: lite)
 deployment: lite
-pullPolicy: "Always"
+pullPolicy: "IfNotPresent"
 persistentVolumeReclaimPolicy: "Retain"
 persistentVolumeAccessModes: "ReadWriteOnce"
 
