--- a/pom.xml
+++ b/pom.xml
@@ -102,6 +102,7 @@
         <spark.version>2.1.2</spark.version>
         <spring.version>5.3.10</spring.version>
         <spring-boot.version>2.5.5</spring-boot.version>
+        <spring-security.version>5.5.2</spring-security.version>
         <swagger.version>2.1.6</swagger.version>
         <type-parser.version>0.6.0</type-parser.version>
         <underscore.version>1.47</underscore.version>
@@ -200,7 +201,7 @@
             <dependency>
                 <groupId>com.google.code.gson</groupId>
                 <artifactId>gson</artifactId>
-                <version>2.8.7</version>
+                <version>2.8.8</version>
             </dependency>
             <dependency>
                 <groupId>com.google.guava</groupId>
@@ -683,6 +684,11 @@
                 <version>${spring.version}</version>
             </dependency>
             <dependency>
+                <groupId>org.springframework.security</groupId>
+                <artifactId>spring-security-core</artifactId>
+                <version>${spring-security.version}</version>
+            </dependency>
+            <dependency>
                 <groupId>org.springframework</groupId>
                 <artifactId>spring-web</artifactId>
                 <version>${spring.version}</version>
@@ -832,12 +838,14 @@
         <module>streampipes-commons</module>
         <module>streampipes-config</module>
         <module>streampipes-connect</module>
+        <module>streampipes-connect-api</module>
         <module>streampipes-connect-container-master</module>
         <module>streampipes-connect-container-worker</module>
         <module>streampipes-container</module>
         <module>streampipes-container-base</module>
         <module>streampipes-container-extensions</module>
         <module>streampipes-container-standalone</module>
+        <module>streampipes-data-explorer</module>
         <module>streampipes-dataformat</module>
         <module>streampipes-dataformat-cbor</module>
         <module>streampipes-dataformat-fst</module>
@@ -858,9 +866,15 @@
         <module>streampipes-pipeline-management</module>
         <module>streampipes-sources</module>
         <module>streampipes-rest</module>
+        <module>streampipes-rest-core-base</module>
         <module>streampipes-rest-shared</module>
         <module>streampipes-sdk</module>
+        <module>streampipes-security-jwt</module>
         <module>streampipes-serializers-json</module>
+        <module>streampipes-service-discovery</module>
+        <module>streampipes-service-discovery-consul</module>
+        <module>streampipes-service-discovery-api</module>
+        <module>streampipes-service-extensions-base</module>
         <module>streampipes-storage-api</module>
         <module>streampipes-storage-management</module>
         <module>streampipes-storage-couchdb</module>
@@ -875,13 +889,6 @@
         <module>streampipes-wrapper-siddhi</module>
         <module>streampipes-wrapper-spark</module>
         <module>streampipes-wrapper-standalone</module>
-        <module>streampipes-data-explorer</module>
-        <module>streampipes-service-discovery</module>
-        <module>streampipes-service-discovery-consul</module>
-        <module>streampipes-service-discovery-api</module>
-        <module>streampipes-connect-api</module>
-        <module>streampipes-service-extensions-base</module>
-        <module>streampipes-rest-core-base</module>
     </modules>
 
     <profiles>
