--- a/streampipes-user-management/pom.xml
+++ b/streampipes-user-management/pom.xml
@@ -41,6 +41,11 @@
         </dependency>
         <dependency>
             <groupId>org.apache.streampipes</groupId>
+            <artifactId>streampipes-security-jwt</artifactId>
+            <version>0.69.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.streampipes</groupId>
             <artifactId>streampipes-storage-management</artifactId>
             <version>0.69.0-SNAPSHOT</version>
         </dependency>
