--- a/streampipes-client/pom.xml
+++ b/streampipes-client/pom.xml
@@ -61,6 +61,11 @@
         </dependency>
         <dependency>
             <groupId>org.apache.streampipes</groupId>
+            <artifactId>streampipes-security-jwt</artifactId>
+            <version>0.69.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.streampipes</groupId>
             <artifactId>streampipes-serializers-json</artifactId>
             <version>0.69.0-SNAPSHOT</version>
         </dependency>
