--- a/streampipes-connect-adapters/pom.xml
+++ b/streampipes-connect-adapters/pom.xml
@@ -35,6 +35,11 @@
                 <artifactId>streampipes-connect-container-worker</artifactId>
                 <version>${streampipes.version}</version>
             </dependency>
+            <dependency>
+                <groupId>org.apache.streampipes</groupId>
+                <artifactId>streampipes-container-extensions</artifactId>
+                <version>${streampipes.version}</version>
+            </dependency>
 
             <!-- External dependencies -->
             <dependency>
