Provide "HTTP Server" adapter endpoints
See https://issues.apache.org/jira/browse/STREAMPIPES-440

--- a/ui/nginx_config/default.conf
+++ b/ui/nginx_config/default.conf
@@ -128,6 +128,17 @@ server {
     proxy_redirect off;
   }
   
+  location ~/endpoints/(?<endpointName>.*)$ {
+    set $upstream connect-worker-main:8098/api/v1/worker/live/$endpointName;
+
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-NginX-Proxy true;
+    proxy_pass http://$upstream;
+    proxy_ssl_session_reuse off;
+    proxy_set_header Host $http_host;
+  }
+  
   #error_page  404              /404.html;
 
   # redirect server error pages to the static page /50x.html
