[STREAMPIPES-441] Add module and UI views to let StreamPipes send emails

--- a/pom.xml
+++ b/pom.xml
@@ -654,6 +654,11 @@
                 <version>${rendersnake.version}</version>
             </dependency>
             <dependency>
+                <groupId>org.simplejavamail</groupId>
+                <artifactId>simple-java-mail</artifactId>
+                <version>6.6.1</version>
+            </dependency>
+            <dependency>
                 <groupId>org.slf4j</groupId>
                 <artifactId>slf4j-api</artifactId>
                 <version>${slf4j.version}</version>
@@ -889,6 +894,7 @@
         <module>streampipes-wrapper-siddhi</module>
         <module>streampipes-wrapper-spark</module>
         <module>streampipes-wrapper-standalone</module>
+        <module>streampipes-mail</module>
     </modules>
 
     <profiles>
