--- a/streampipes-rest/pom.xml
+++ b/streampipes-rest/pom.xml
@@ -62,6 +62,11 @@
         </dependency>
         <dependency>
             <groupId>org.apache.streampipes</groupId>
+            <artifactId>streampipes-mail</artifactId>
+            <version>0.69.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.streampipes</groupId>
             <artifactId>streampipes-model-client</artifactId>
             <version>0.69.0-SNAPSHOT</version>
         </dependency>
