--- a/pom.xml
+++ b/pom.xml
@@ -414,6 +414,11 @@
             </dependency>
             <dependency>
                 <groupId>org.apache.streampipes</groupId>
+                <artifactId>streampipes-model</artifactId>
+                <version>${streampipes.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.streampipes</groupId>
                 <artifactId>streampipes-sdk</artifactId>
                 <version>${streampipes.version}</version>
             </dependency>
