--- a/ui/package.json
+++ b/ui/package.json
@@ -60,7 +60,7 @@
     "file-saver": "1.3.8",
     "jquery": "2.1.3",
     "jquery-ui-dist": "1.12.1",
-    "jshint": "2.11.1",
+    "jshint": "^2.13.1",
     "jsplumb": "^2.15.5",
     "jszip": "3.2.1",
     "konva": "3.2.4",
@@ -133,11 +133,10 @@
     "tslint": "~6.1.0",
     "tslint-config-prettier": "^1.15.0",
     "typescript": "4.3.5",
-    "uglifyjs-webpack-plugin": "2.2.0",
-    "webpack": "4.44.1",
-    "webpack-bundle-analyzer": "^3.9.0",
-    "webpack-cli": "3.3.12",
-    "webpack-dev-server": "3.11.0",
-    "webpack-merge": "^4.2.1"
+    "uglifyjs-webpack-plugin": "^2.2.0",
+    "webpack": "^5.58.1",
+    "webpack-cli": "^4.9.0",
+    "webpack-dev-server": "^4.3.1",
+    "webpack-merge": "^5.8.0"
   }
 }
