--- a/streampipes-connect-adapters-iiot/pom.xml
+++ b/streampipes-connect-adapters-iiot/pom.xml
@@ -245,6 +245,10 @@
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-collections4</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.apache.streampipes</groupId>
+            <artifactId>streampipes-container-extensions</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
