--- a/cli/deploy/standalone/connect-adapters/docker-compose.yml
+++ b/cli/deploy/standalone/connect-adapters/docker-compose.yml
@@ -13,20 +13,28 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-[environment:full]
-ui
-backend
-connect-adapters
-connect-adapters-iiot
-activemq
-consul
-couchdb
-jobmanager
-taskmanager
-zookeeper
-kafka
-influxdb
-sources-watertank-simulator
-sources-vehicle-simulator
-pipeline-elements-all-jvm
-pipeline-elements-all-flink
+version: "3.4"
+services:
+  connect-adapters:
+    image: ${SP_DOCKER_REGISTRY}/connect-adapters:${SP_VERSION}
+    depends_on:
+      - consul
+    environment:
+      - SP_BACKEND_HOST=backend
+      - SP_CONNECT_CONTAINER_WORKER_HOST=connect-adapters
+    volumes:
+      - connect:/data/
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "1m"
+        max-file: "1"
+    networks:
+      spnet:
+
+volumes:
+  connect:
+
+networks:
+  spnet:
+    external: true
