--- a/pom.xml
+++ b/pom.xml
@@ -895,6 +895,7 @@
         <module>streampipes-wrapper-spark</module>
         <module>streampipes-wrapper-standalone</module>
         <module>streampipes-mail</module>
+        <module>streampipes-resource-management</module>
     </modules>
 
     <profiles>
