[STREAMPIPES-426] Improve permission management

--- a/ui/angular.json
+++ b/ui/angular.json
@@ -69,6 +69,8 @@
               }
             },
             "development": {
+              "sourceMap": true,
+              "optimization": false,
               "customWebpackConfig": {
                 "path": "./webpack.partial.dev.js"
               }
