--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,7 @@
         <influxdb.version>2.21</influxdb.version>
         <jackson.version>2.12.3</jackson.version>
         <jakarta-annotation.version>1.3.5</jakarta-annotation.version>
+        <jakarta-mail.version>1.6.7</jakarta-mail.version>
         <jakarta-validation.version>2.0.2</jakarta-validation.version>
         <javapoet.version>1.6.1</javapoet.version>
         <javax-annotation.version>1.3.2</javax-annotation.version>
@@ -227,6 +228,11 @@
                 <groupId>com.squareup.retrofit2</groupId>
                 <artifactId>retrofit</artifactId>
                 <version>${retrofit.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.sun.mail</groupId>
+                <artifactId>jakarta.mail</artifactId>
+                <version>${jakarta-mail.version}</version>
             </dependency>
             <dependency>
                 <groupId>commons-beanutils</groupId>
