--- a/streampipes-rest/pom.xml
+++ b/streampipes-rest/pom.xml
@@ -120,6 +120,12 @@
             <artifactId>influxdb-java</artifactId>
         </dependency>
 
+        <!-- dependency convergence -->
+        <dependency>
+            <groupId>com.sun.mail</groupId>
+            <artifactId>jakarta.mail</artifactId>
+        </dependency>
+
         <!-- Test dependencies -->
         <dependency>
             <groupId>junit</groupId>
