--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,7 @@
         <httpcore.version>4.4.9</httpcore.version>
         <httpcore-osgi.version>4.4.9</httpcore-osgi.version>
         <influxdb.version>2.21</influxdb.version>
+        <j2html.version>1.4.0</j2html.version>
         <jackson.version>2.12.3</jackson.version>
         <jakarta-annotation.version>1.3.5</jakarta-annotation.version>
         <jakarta-mail.version>1.6.7</jakarta-mail.version>
@@ -188,6 +189,11 @@
                 <groupId>com.fasterxml.jackson.module</groupId>
                 <artifactId>jackson-module-jaxb-annotations</artifactId>
                 <version>${jackson.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.j2html</groupId>
+                <artifactId>j2html</artifactId>
+                <version>${j2html.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.github.drapostolos</groupId>
