[STREAMPIPES-426] Improve management of secrets

--- a/streampipes-user-management/pom.xml
+++ b/streampipes-user-management/pom.xml
@@ -67,6 +67,12 @@
             <groupId>io.jsonwebtoken</groupId>
             <artifactId>jjwt-jackson</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.jasypt</groupId>
+            <artifactId>jasypt</artifactId>
+            <version>1.9.3</version>
+        </dependency>
+
 
         <!-- Test dependencies -->
         <dependency>
